Alignment issues in itemlist in place-detail

--- a/src/app/item-list-unit/item-list-unit.component.scss
+++ b/src/app/item-list-unit/item-list-unit.component.scss
@@ -14,3 +14,7 @@
   width: 7rem;
 }
 
+.picsum-img-wrapper{
+  max-width: 11rem;
+  width: 10rem;;
+}
