--- a/src/styles/new_checkbox.scss
+++ b/src/styles/new_checkbox.scss
@@ -36,7 +36,7 @@
     display: block;
     position: relative;
     padding-left: 30px;
-    margin-bottom: 15px;
+    // margin-bottom: 15px;
     cursor: pointer;
     font-size: 18px;
   }
