--- a/src/styles/svg_components.scss
+++ b/src/styles/svg_components.scss
@@ -26,8 +26,8 @@
 }
 .fx-icon-no-image {
   mask: url(../assets/images/svgs/no-image.svg) no-repeat;
-  width: 24px;
-  height: 24px;
+  // width: 24px;
+  // height: 24px;
   mask-size: contain;
   opacity: 0.3;
 }
